# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\PlayerController;
+use App\Http\Controllers\Api\TeamController;
 
 /*
 |--------------------------------------------------------------------------
@@ -24,6 +25,9 @@ Route::middleware('auth:sanctum')->group(function () {
 
     // Player routes
     Route::apiResource('players', PlayerController::class);
+    
+    // Team routes
+    Route::apiResource('teams', TeamController::class);
 });
 
 // Route::post('/register', [AuthController::class, 'register']);
